DIAC-1397 Edit appeal post submission - Detained (in IRC or Prison) notification (#1550)